corrected multiple spacing issues

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -73,9 +73,13 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    vertical-align: top;
 }
 
 .content {
+    width: 75%;
+    margin-left: 20px;
+    vertical-align: top;
     margin: 0 20px 20px;
     padding: 50px;
     width: 75%;
@@ -88,10 +92,10 @@ p {
 
 .benefits {
     margin-right: 20px;
+    display: inline-block;
+    vertical-align: top;
     padding: 20px;
     width: 20%;
-    clear: both;
-    float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
